# sync-simplenote

./: .gitignore  README.md  build.py  prepare.py  pyproject.toml  pyuic.json
app/: __main__.py
app/services/: login.py  worker.py
app/views/: MainWindow.py
resources/translations/: ca_ES.ts  en_US.ts  es_ES.ts  fr_FR.ts
resources/views/: MainWindow.ui
