[tool.poetry]
name = "sync-simplenote"
version = "0.1.0"
description = "sync recently modified notes in Simplenote to Notion."
authors = ["tridn <tridnguyen97@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sync_simplenote"}]

[tool.poetry.dependencies]
python = "^3.8, ^3.9, ^3.10"
PyQt6 = "^6.6.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
pylint = "^3.0.3"
flake8 = "^6.1.0"
isort = "^5.13.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
