[tool.poetry]
name = "sync-simplenote"
version = "0.1.0"
description = "sync recently modified notes in Simplenote to Notion."
authors = ["tridn <tridnguyen97@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
PyQt6 = "6.4.2"
pytest = "^7.4.3"
pytest-qt = "^4.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
pylint = "^3.0.3"
flake8 = "^6.1.0"
isort = "^5.13.1"
pre-commit = "^3.6.0"
pytest-qt = "^4.2.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
pyside6 = "^6.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
prepare = "prepare:main"
dev = "app.__main__:main"
build = "build:main"
